# VisAgent-Proto

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  mkdocs.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/scripts/: create_pr.sh
.github/workflows/: generate-deploy-mkdocs-ghpages.yaml
docs/: PRD.md  project_dsl.txt
docs/architecture/: c4_diagram.md
src/: __main__.py  app.py
src/utils/: conveyor_detection.py  image_processing.py  logging_config.py  models.py  segmentation.py
tests/: test_conveyor_detection.py  test_segmentation.py  test_utils.py
